force-app/main/default/objects/Forms_Group__c/Forms_Group__c.object-meta.xml
<CustomObject>
    <label>Forms Group</label>
    <nameField>
        <displayFormat>FG-{0000}</displayFormat>
        <label>Forms Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms Group</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>