force-app/main/default/objects/Forms_Group__c/fields/Form_Score__c.field-meta.xml
<CustomField>
    <fullName>Form_Score__c</fullName>
    <label>Form Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>