force-app/main/default/objects/Forms_Group__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>250</length>
    <type>Text</type>
</CustomField>