force-app/main/default/objects/Forms_Group__c/fields/Total_Form_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Form_Points__c</fullName>
    <label>Total Form Points</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>